htpc/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex 
spec:
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
      name: mediaserver
