htpc/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: plex
          servicePort: mediaserver
    host: plex.k3s.ingenstans.se
  tls:
    - hosts:
      - plex.k3s.ingenstans.se
      secretName: plex-ingress-cert
